# MapPolyAngle

./: .gitignore  Agent.md  PLAN.md  README.md  backend_region_objective_cache_plan.md  lidar_camera_node_cost_plan.md  lidar_fidelity_improvement_plan.md  lidar_info.md  line_lift_objective_plan.md  package-lock.json  package.json  problem_formulation.md  replit.md  tailwind.config.ts  terrain_face_partition_plan.md  terrain_partition_boundary_cost_plan.md  terrain_partition_current_state.md  terrain_partition_tradeoff_design.md  test lidar.flightplan  test-areas.kml  test-geometry-datum.js  vite.config.ts  wingtra_lidar_plan.md
attached_assets/: MapFlightDirection_1753896039230.tsx  Pasted--Root-cause-terrainAspect-ts-first-computes-the-Horn-aspect-atan2-dz-dy-dz-dx-1753898662843_1753898662843.txt  Pasted--Why-the-pink-line-looks-rotated-terrainAspect-ts-follows-the-classic-Horn-ArcGIS-convention--1753898102204_1753898102204.txt  terrainAspect_1753896039231.ts  (+1 more)
backend/terrain_splitter/: README.md  deploy_aws.sh  main.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
backend/terrain_splitter/scripts/: benchmark_partition_request.py
backend/terrain_splitter/terrain_splitter/: app.py  costs.py  debug.py  features.py  geometry.py  grid.py  mapbox_tiles.py  postprocess.py  schemas.py  solver_frontier.py  solver_graphcut.py
backend/terrain_splitter/terrain_splitter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/terrain_splitter/tests/: test_costs.py  test_solver_graphcut.py
client/: index.html
src/: env.d.ts
(+57 files in other folders)
